--- a/data_structures.ipynb
+++ b/data_structures.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -89,15 +89,12 @@
     "print(a_tuple + a_tuple)\n",
     "\n",
     "print(a_list * 2)\n",
-    "print(a_tuple * 2)\n",
-    "\n",
-    "# a_dictionary + a_dictionary\n",
-    "# a_set + a_set"
+    "print(a_tuple * 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +103,13 @@
        "(2, 2.2, 1)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_list[1], a_tuple[1], a_dictionary['one']#, a_set['1'] "
+    "a_list[1], a_tuple[1], a_dictionary['one']"
    ]
   },
   {
@@ -132,7 +129,7 @@
     }
    ],
    "source": [
-    "a_list[1:2], a_tuple[1:2]#, a_dictionary['one'], a_set['1'] "
+    "a_list[1:2], a_tuple[1:2]"
    ]
   },
   {
@@ -152,7 +149,7 @@
     }
    ],
    "source": [
-    "a_list[::-1], a_tuple[::-1]#, a_dictionary['one'], a_set['1'] "
+    "a_list[::-1], a_tuple[::-1]"
    ]
   },
   {
@@ -169,7 +166,7 @@
     }
    ],
    "source": [
-    "a_list[1:2] = [4, 5, 6] # .insert(1, [4, 5, 6])\n",
+    "a_list[1:2] = [4, 5, 6]\n",
     "print(a_list)"
    ]
   },
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -419,8 +416,8 @@
      "text": [
       "[2, 6]\n",
       "{'one': 2, 'two': 4, 'three': 6}\n",
-      "{1, 2, 3}\n",
-      "<generator object <genexpr> at 0x7fb3f56bfdf0>\n"
+      "{2, 4, 6}\n",
+      "<generator object <genexpr> at 0x7fb3f554ca50>\n"
      ]
     }
    ],
@@ -429,7 +426,7 @@
     "\n",
     "print({k:v*2 for (k,v) in a_dictionary.items()})\n",
     "\n",
-    "print({elm for elm in a_set})\n",
+    "print({elm * 2 for elm in a_set})\n",
     "\n",
     "tuple_comp = (i * 2 for i in a_tuple)\n",
     "print(tuple_comp)"
